--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@ MONGO_DB_URL_TABLE_RC="" 				# Provide a value for MONGO_DB_URL_TABLE_RC
 MONGO_DB_URL_TABLE_PT="" 				# Provide a value for MONGO_DB_URL_TABLE_PT
 MONGO_DB_URL_TABLE_MSIB="" 				# Provide a value for MONGO_DB_URL_TABLE_MSIB
 MONGO_DB_URL_TABLE_TFR="" 				# Provide a value for MONGO_DB_URL_TABLE_TFR
+
 TMP ="" 				# Provide a value for TMP 
 URL_PROJECT ="" 				# Provide a value for URL_PROJECT 
 CHROMEDRIVER_PATH ="" 				# Provide a value for CHROMEDRIVER_PATH 
 CHROME_PATH ="" 				# Provide a value for CHROME_PATH 
+
 TWITTER_CLIENT_TOKEN="" 				# Provide a value for TWITTER_CLIENT_TOKEN
 TWITTER_CLIENT_SECRET="" 				# Provide a value for TWITTER_CLIENT_SECRET
 TWITTER_API_KEY="" 				# Provide a value for TWITTER_API_KEY
@@ -15,4 +17,9 @@ TWITTER_API_SECRET_KEY="" 				# Provide a value for TWITTER_API_SECRET_KEY
 TWITTER_ACCESS_TOKEN="" 				# Provide a value for TWITTER_ACCESS_TOKEN
 TWITTER_ACCESS_TOKEN_SECRET="" 				# Provide a value for TWITTER_ACCESS_TOKEN_SECRET
 TWITTER_BEARER_TOKEN="" 				# Provide a value for TWITTER_BEARER_TOKEN
+
 SENTRY_URL="" 				# Provide a value for SENTRY_URL
+
+AIRFLOW_ADMIN_USER="" 				# Provide a value for AIRFLOW_ADMIN_USER
+AIRFLOW_ADMIN_PASSWORD="" 				# Provide a value for AIRFLOW_ADMIN_PASSWORD
+AIRFLOW_ADMIN_EMAIL="" 				# Provide a value for AIRFLOW_ADMIN_EMAIL
