fix: url with cookies yt

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ SENTRY_URL="" 				# Provide a value for SENTRY_URL
 AIRFLOW_ADMIN_USER="" 				# Provide a value for AIRFLOW_ADMIN_USER
 AIRFLOW_ADMIN_PASSWORD="" 				# Provide a value for AIRFLOW_ADMIN_PASSWORD
 AIRFLOW_ADMIN_EMAIL="" 				# Provide a value for AIRFLOW_ADMIN_EMAIL
+
+YT_COOKIES="" 				# Provide a value for YT_COOKIES
