--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ tqdm==4.65.0
 tweepy==4.14.0
 tzdata==2023.3
 urllib3==2.0.3
-vidgear==0.3.0
+vidgear
 webcolors==1.13
 websockets==11.0.3
 yarg==0.1.9
