--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ AIRFLOW_ADMIN_PASSWORD="" 				# Provide a value for AIRFLOW_ADMIN_PASSWORD
 AIRFLOW_ADMIN_EMAIL="" 				# Provide a value for AIRFLOW_ADMIN_EMAIL
 
 YT_COOKIES="" 				# Provide a value for YT_COOKIES
+
+DATA_DIR="" 				# Provide a value for DATA_DIR
