--- a/Dockerfile.watcher
+++ b/Dockerfile.watcher
@@ -2,24 +2,19 @@ FROM python:3.11-slim
 
 ENV DEBIAN_FRONTEND=noninteractive TZ=Europe/Paris
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    tesseract-ocr ffmpeg libgl1 tzdata \
+    ca-certificates wget tesseract-ocr ffmpeg libgl1 tzdata \
+ && update-ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 ENV PYTHONUNBUFFERED=1 PYTHONPATH=/app
 
-# 1) deps Python (ton fichier existe ici)
-COPY requirements.txt .
+COPY watcher_servive/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 2) code du watcher (dossier avec un "v")
+# code
 COPY watcher_servive/ /app/watcher_servive/
-
-# 3) tes utilitaires importés par "from utils ..."
-#    (ils sont dans src/utils dans ton repo)
 COPY src/utils/ /app/utils/
 
 EXPOSE 8000
-
-# Lance le module en tenant compte du nom "watcher_servive"
 CMD ["python", "-m", "watcher_servive.main"]
